--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-05-04" />
-        <meta property="og:article:modified_time" content="2020-05-06" />
+        <meta property="og:article:modified_time" content="2020-06-21" />
 <meta property="og:title" content="Выбор времени для покупки акций" />
 <meta property="og:url" content="https://onfin.github.io/notes/markettiming" />
 
@@ -55,19 +55,14 @@
         <h1>Выбор времени для покупки акций</h1>
         <div class="meta">
                 <p class="description">Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</p>
-                <p> Обновлено: <time>2020-05-06</time> </p>
+                <p> Обновлено: <time>2020-06-21</time> </p>
 
         </div>
     </header>
 
     <div class="content">
         <p>По мотивам статьи <a href="https://ofdollarsanddata.com/why-market-timing-can-be-so-appealing/">Ника Маггиулли</a> (<a href="https://assetallocation.ru/why-market-timing-can-be-so-appealing/">перевод Сергея Спирина</a>).</p>
-<!--
-Начну с общетеоретического замечания. Почему-то многим кажется, что расчёт динамики портфеля с довложениями нагляднее и даже корректнее. Это не так. Результаты такого расчёта очень сильно зависят от свободных параметров: соотношения размера начального капитала и размера довложений, динамики этого размера (фиксированный, индексация на инфляцию, индексация на предполагаемый рост з/п инвестора...), интервала между довложениями. А по мере роста портфеля довложения начинают играть всё меньшую и меньшую роль, и портфель начинает вести себя как портфель без довложений. То есть получается очень искажённая и нестабильная во времени динамика, которая не соответствует никакому реальному случаю. Автор исходной заметки тоже, по-видимому, не избежал этого заблуждения и получил искажённые результаты.
-
-Расчёт с довложениями, на самом деле, не приносит никакой новой информации. Ведь каждое довложение с момента его инвестирования повторяет динамику начального капитала. Поэтому наши _ожидания_ относительно доходности и риска портфеля не зависят от того, вносим мы в него дополнительные суммы, или нет. -->
-
-<p>Волатильность фондового рынка такова, что примерно 75% времени ваш портфель акций находится в состоянии затяжного падения с предыдущего абсолютного максимума до следующего абсолютного минимума (под ними я здесь подразумеваю максимум, которого никогда не было ранее и минимум, который никогда более не повторится; high water mark (LWM) и low water mark (HWM) в англоязычной литературе).</p>
+<p>Волатильность фондового рынка такова, что примерно 75% времени ваш портфель акций находится в состоянии затяжного падения с предыдущего абсолютного максимума до следующего абсолютного минимума (под ними я здесь подразумеваю максимум, которого никогда не было ранее и минимум, который никогда более не повторится; high water mark (HWM) и low water mark (LWM) в англоязычной литературе).</p>
 <p><img src=/notes/markettiming/stocks_min_max.svg style="width: 100%; height: 50wv" /></p>
 <p>(График реальной доходности с учётом реинвестирования дивидендов, без налогов и транзакционных издержек. <a href="http://www.econ.yale.edu/~shiller/data.htm">Данные Роберта Шиллера</a>.)</p>
 <p>Владение акциями — это боль. Что порождает естественное стремление как-то её облегчить. Как минимум, подождать удачного момента для покупки, чтобы снизить риск «потери» свежезанесённых денег. Посмотрим, что из этого получается. Для этого будем пытаться выбрать удачный момент для покупки индекса SnP500, придерживая деньги в краткосрочных облигациях, и сравним полученные результаты с инвестированием всей суммы сразу, на всех возможных 15-летних интервалах.</p>
@@ -99,7 +94,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/bonds_in_portfolio"> &lt;&lt; Облигации в инвестиционном портфеле </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/bonds_in_portfolio"> &lt;&lt; Облигации в инвестиционном портфеле </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/contributions"> Проблема довложений &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
