--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-06-21" />
+        <meta property="og:article:modified_time" content="2020-06-27" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -26,7 +26,7 @@
 <body>
     <header>
         <nav class="menu">
-            <label class="menu-container">
+            <label class="menu-container" for="toggle-menu">
                 <div class="menu-head">
                     <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
@@ -34,16 +34,16 @@
                         <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
-                <input type="checkbox" />
                 <div class="checkmark">&equiv;</div>
-                <ul class="menu">
-                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
-                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
-                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
-                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
-                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
-                </ul>
             </label>
+            <input type="checkbox" id="toggle-menu" />
+            <ul class="menu">
+                    <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                    <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                    <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                    <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                    <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -63,6 +63,7 @@
 <ol>
 <li><a href="/notes/capital">Зачем нужен капитал</a></li>
 <li><a href="/notes/recklessness">Безответственное отношение к деньгам</a></li>
+<li><a href="/notes/fallacies">Порочные идеи</a></li>
 <li><a href="/notes/finplan">Личный финансовый план — не нужен</a></li>
 <li><a href="/notes/lifeprofile">Финансовый профиль жизни обычного человека и инвестора</a></li>
 </ol>
