--- a/notes/recklessness.html
+++ b/notes/recklessness.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-29" />
-        <meta property="og:article:modified_time" content="2019-12-29" />
+        <meta property="og:article:modified_time" content="2020-06-27" />
 <meta property="og:title" content="Безответственное отношение к деньгам" />
 <meta property="og:url" content="https://onfin.github.io/notes/recklessness" />
 
@@ -26,7 +26,7 @@
 <body>
     <header>
         <nav class="menu">
-            <label class="menu-container">
+            <label class="menu-container" for="toggle-menu">
                 <div class="menu-head">
                     <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
@@ -34,16 +34,16 @@
                         <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
-                <input type="checkbox" />
                 <div class="checkmark">&equiv;</div>
-                <ul class="menu">
-                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
-                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
-                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
-                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
-                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
-                </ul>
             </label>
+            <input type="checkbox" id="toggle-menu" />
+            <ul class="menu">
+                    <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                    <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                    <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                    <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                    <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -55,13 +55,13 @@
         <h1>Безответственное отношение к деньгам</h1>
         <div class="meta">
                 <p class="description">«Мне не хватает денег». «Мне не нужны деньги». «Чтобы больше зарабатывать, нужно больше тратить». Хватает. Нужны. Нет. И не отмазывайтесь. Разбираем самые распространённые причины отказа от сбережений.</p>
-                <p> Обновлено: <time>2019-12-29</time> </p>
+                <p> Обновлено: <time>2020-06-27</time> </p>
 
         </div>
     </header>
 
     <div class="content">
-        <p>В продолжение <a href="/notes/capital">заметки про капитал</a>, разберём установки, ведущие к саморазрушительному финансовому поведению.</p>
+        <p>В продолжение <a href="/notes/capital">заметки про капитал</a>, разберём отговорки, которые обычно используются людьми, практикующими финансовое саморазрушение.</p>
 <h2 id="1">1. «Мне не хватает»</h2>
 <p>Если исключить случаи крайней бедности, когда приходится выбирать между едой, одеждой и коммуналкой, — это признак расточительства. Впрочем, необходимость выбирать между едой, одеждой и коммуналкой также может отсюда происходить.</p>
 <p>Если сознательно не контролировать и не ограничивать расходы — они будут только расти, пока не начнут съедать все деньги и даже больше. При этом удовольствия от жизни вам сильно не прибавится. Потому что человек чувствует лишь относительную разницу с фоном. Предположим, что расходы превращаются в качество жизни со 100%-ным КПД (что, конечно, не так, и вообще этот КПД может быть отрицательным), а ваш начальный уровнь расходов — 20Кр. И вот вы, допустим, нашли новую работу и разом их удвоили. Первое время вы чувствуете себя царём Соломоном и Цезарем Августом в одном лице, а потом оказывается, что ничего особо не изменилось, фон устаканился, воодушевление прошло. Но мозг запомнил, откуда оно берётся, хочется повторить. А чтобы повторить расходы надо вновь удваивать, нужно выйти уже на 80Кр чтобы достичь того же эффекта.</p>
@@ -100,7 +100,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/finplan"> Личный финансовый план — не нужен &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/capital"> &lt;&lt; Зачем нужен капитал </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/fallacies"> Порочные идеи &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
