--- a/pages/halava.html
+++ b/pages/halava.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2019-10-18" />
+        <meta property="og:article:modified_time" content="2020-06-25" />
 <meta property="og:title" content="Халява" />
 <meta property="og:url" content="https://onfin.github.io/pages/halava" />
 
@@ -28,7 +28,7 @@
 <body>
     <header>
         <nav class="menu">
-            <label class="menu-container">
+            <label class="menu-container" for="toggle-menu">
                 <div class="menu-head">
                     <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
@@ -36,16 +36,16 @@
                         <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
-                <input type="checkbox" />
                 <div class="checkmark">&equiv;</div>
-                <ul class="menu">
-                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
-                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
-                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
-                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
-                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
-                </ul>
             </label>
+            <input type="checkbox" id="toggle-menu" />
+            <ul class="menu">
+                    <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                    <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                    <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                    <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                    <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
+            </ul>
         </nav>
     </header>
 
@@ -57,7 +57,7 @@
         <h1>Халява</h1>
         <div class="meta">
                 <p class="description">Здесь собраны всякие сервисы, от которых я получаю некоторую выгоду. К некоторым приложены реферальные ссылки (выделены жирным в конце описания), за регистрацию по которым каждый из нас получит по небольшой халявной плюшке.</p>
-                <p> Обновлено: <time>2019-10-18</time> </p>
+                <p> Обновлено: <time>2020-06-25</time> </p>
 
         </div>
     </header>
