--- a/pages/literacy.html
+++ b/pages/literacy.html
@@ -17,7 +17,7 @@
 <meta property="og:locale" content="ru" />
     <meta property="og:description" content="Заметки по финансовой грамотности в систематическом виде." />
     <meta property="og:type" content="article" />
-        <meta property="og:article:modified_time" content="2020-01-02" />
+        <meta property="og:article:modified_time" content="2020-06-25" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/pages/literacy" />
 
@@ -27,7 +27,7 @@
 <body>
     <header>
         <nav class="menu">
-            <label class="menu-container">
+            <label class="menu-container" for="toggle-menu">
                 <div class="menu-head">
                     <a href="/" class="menu-link menu-link-home">Житейские воззрения пана Семушельского</a>
                     <div class="social">
@@ -35,16 +35,16 @@
                         <a href="/feed.atom.xml" class="menu-link"><i class="share">&#xea9f;</i></a>
                     </div>
                 </div>
-                <input type="checkbox" />
                 <div class="checkmark">&equiv;</div>
-                <ul class="menu">
-                        <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
-                        <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
-                        <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
-                        <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
-                        <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
-                </ul>
             </label>
+            <input type="checkbox" id="toggle-menu" />
+            <ul class="menu">
+                    <li class="menu-item"><a href="/blog" class="menu-link">Сиюминутное</a></li>
+                    <li class="menu-item"><a href="/literacy" class="menu-link">Грамотность</a></li>
+                    <li class="menu-item"><a href="/notes" class="menu-link">Заметки</a></li>
+                    <li class="menu-item"><a href="/pages/sources" class="menu-link">Источники</a></li>
+                    <li class="menu-item"><a href="/calculators" class="menu-link">Калькуляторы</a></li>
+            </ul>
         </nav>
     </header>
 
