--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2020-04-02" />
+        <meta property="og:article:modified_time" content="2020-06-27" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -55,7 +55,7 @@
         <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
         <div class="meta">
                 <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
-                <p> Обновлено: <time>2020-04-02</time> </p>
+                <p> Обновлено: <time>2020-06-27</time> </p>
 
         </div>
     </header>
@@ -66,7 +66,7 @@
 <li><a href="#_1">Индивидуальный инвестиционный счёт с вычетом на взносы</a></li>
 <li><a href="#_2">Индивидуальный инвестиционный счёт с вычетом на доход</a></li>
 <li><a href="#_3">Нюансы использования ИИС</a></li>
-<li><a href="#_4">Льгота по долгосрочному владению ценными бумагами</a></li>
+<li><a href="#_4">Льгота по долгосрочному владению ценными бумагами (ЛДВ)</a></li>
 <li><a href="#_5">Льгота на доход от продажи бумаг высокотехнологичного сектора</a></li>
 <li><a href="#_6">Возможность зачесть убытки предыдущих лет</a></li>
 <li><a href="#_7">Возможность зачесть убытки с другого брокерского счёта</a></li>
@@ -133,7 +133,7 @@
 <li>Как вы будете распоряжаться деньгами, зачисленными на ИИС, никого не волнует.</li>
 <li>Если у вас небольшие доходы, получение купонов и дивидендов на банковский счёт с последующим возвратом на ИИС позволяет включить в вычет и их. Если вы их получаете сразу на ИИС, то указать их в декларации для получения вычета не получится.</li>
 </ol>
-<h2 id="_4">Льгота по долгосрочному владению ценными бумагами</h2>
+<h2 id="_4">Льгота по долгосрочному владению ценными бумагами (ЛДВ)</h2>
 <p>Она же трёхлетняя льгота, она же инвестиционный налоговый вычет, предусмотренный пп. 1 п. 1 ст. 219.1 НК РФ.</p>
 <p>Представляет собой налоговый вычет на доход от продажи ценных бумаг, бывших в собственности больше 3-х лет, в размере 3Мр за каждый <em>полный</em> год владения каждым наименованием бумаги. Не работает на ИИС.</p>
 <p>Как получить. После продажи бумаг направить брокеру заявление на применение льготы. Заявление требуется по закону. Вменяемый брокер сам пришлёт вам сообщение, что ваша сделка попадает под льготу и приложит форму заявления. Останется только подписать и отдать.</p>
