--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-06-27" />
+        <meta property="og:article:modified_time" content="2020-06-30" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -73,6 +73,7 @@
 <li><a href="/notes/diversification_math">Математика диверсификации: портфельный эффект и ребалансировка между акциями</a></li>
 <li><a href="/notes/diversification_math2">Математика диверсификации-2: доходность и риск</a></li>
 <li><a href="/notes/mpt">(Не)Математика диверсификации-3: современная теория портфеля</a></li>
+<li><a href="/notes/volatility">Волатильность как мера риска</a></li>
 <li><a href="/notes/inflation">Инфляция</a></li>
 <li><a href="/notes/bonds_in_portfolio">Облигации в инвестиционном портфеле</a></li>
 <li><a href="/notes/markettiming">Выбор времени для покупки акций</a></li>
