--- a/notes/mpt/index.html
+++ b/notes/mpt/index.html
@@ -313,7 +313,7 @@ $$\sigma^2_p = \sum_i w_i^2 \sigma_i^2 + \sum_{i}\sum_{j \neq i} w_i \, w_j \, \
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
+<div class="prevupnext"><a class="prev" href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/volatility"> Волатильность как мера риска &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
