--- a/calculators/index.html
+++ b/calculators/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="На странице собраны ссылки на различные мои финансовые калькуляторы." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-13" />
-        <meta property="og:article:modified_time" content="2020-04-18" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Калькуляторы" />
 <meta property="og:url" content="https://onfin.github.io/calculators" />
 
@@ -85,6 +85,7 @@
 <li><a href="/calculators/fees_taxes_effect">Влияние комиссий и налогов на финансовый результат</a></li>
 <li><a href="/calculators/etf_taxation">Влияние комиссий и налогов на финансовый результат ETF</a></li>
 <li><a href="/calculators/bond_price">Стоимость облигаций</a></li>
+<li><a href="/calculators/etf_us_eu_ru">Эффективность инвестиций через американские, европейские и российские ETF</a></li>
 </ol>
     </div>
     <aside>
