--- a/notes/finplan.html
+++ b/notes/finplan.html
@@ -98,7 +98,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/fallacies"> &lt;&lt; Порочные идеи </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/lifeprofile"> Финансовый профиль жизни обычного человека и инвестора &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
