--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="В чём роль и важность базового банка? Как его правильно выбирать?" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-11" />
-        <meta property="og:article:modified_time" content="2019-11-09" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Выбор базового банка" />
 <meta property="og:url" content="https://onfin.github.io/literacy/basebank" />
 
@@ -55,7 +55,7 @@
         <h1>Выбор базового банка</h1>
         <div class="meta">
                 <p class="description">В чём роль и важность базового банка? Как его правильно выбирать?</p>
-                <p> Обновлено: <time>2019-11-09</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -86,7 +86,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
