--- a/literacy/brokers.html
+++ b/literacy/brokers.html
@@ -568,7 +568,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/credits"> &lt;&lt; Математика кредитов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/moneytransfer"> Денежные переводы &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
