--- a/literacy/cards.html
+++ b/literacy/cards.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-12" />
-        <meta property="og:article:modified_time" content="2019-10-14" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Банковские карты" />
 <meta property="og:url" content="https://onfin.github.io/literacy/cards" />
 
@@ -55,7 +55,7 @@
         <h1>Банковские карты</h1>
         <div class="meta">
                 <p class="description">Как устроена банковская карта. Как банки зарабатывают на картах. Опасности при использовании карт. Виды дебетовых карт. Откуда берётся кэшбэк. Как правильно и выгодно пользоваться кредитными картами.</p>
-                <p> Обновлено: <time>2019-10-14</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -138,7 +138,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/deposits"> &lt;&lt; Размещение средств в банках </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments"> Краткий обзор инструментов сбережения. Сколько и во что вкладывать &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
