--- a/literacy/cardscalc.html
+++ b/literacy/cardscalc.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-14" />
-        <meta property="og:article:modified_time" content="2019-11-19" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Использование и расчёт банковских карт" />
 <meta property="og:url" content="https://onfin.github.io/literacy/cardscalc" />
 
@@ -55,7 +55,7 @@
         <h1>Использование и расчёт банковских карт</h1>
         <div class="meta">
                 <p class="description">Выгоды и опасности банковских карт. Как правильно выбрать и использовать банковскую карту. Стратегия набора веера карт. Расчёт выгоды от использования дебетовых и кредитных карт.</p>
-                <p> Обновлено: <time>2019-11-19</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -263,7 +263,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/basebank"> &lt;&lt; Выбор базового банка </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/credits"> Математика кредитов &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
