--- a/literacy/credits.html
+++ b/literacy/credits.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-01-12" />
-        <meta property="og:article:modified_time" content="2019-10-16" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Математика кредитов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/credits" />
 
@@ -55,7 +55,7 @@
         <h1>Математика кредитов</h1>
         <div class="meta">
                 <p class="description">Теория и расчёт различных схем погашения кредитов. Какова реальная переплата по кредиту по той или иной схеме? Сколько стоит хранить в банке резерв на будущие платежи по кредиту? Сколько можно заработать, если вложить кредитные деньги?</p>
-                <p> Обновлено: <time>2019-10-16</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -112,7 +112,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/cardscalc"> &lt;&lt; Использование и расчёт банковских карт </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/brokers"> Как выбрать брокера &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
