--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-19" />
-        <meta property="og:article:modified_time" content="2020-01-02" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Размещение средств в банках" />
 <meta property="og:url" content="https://onfin.github.io/literacy/deposits" />
         <script>
@@ -69,7 +69,7 @@
         <h1>Размещение средств в банках</h1>
         <div class="meta">
                 <p class="description">Как правильно выбрать банковский вклад, какие бывают схемы начисления и выплаты процентов, расчёт эффективной процентной ставки (для сравнения схем), подводные камни вкладов.</p>
-                <p> Обновлено: <time>2020-01-02</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -153,7 +153,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/moneytransfer"> &lt;&lt; Денежные переводы </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/cards"> Банковские карты &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
