--- a/literacy/howto.html
+++ b/literacy/howto.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-08-18" />
-        <meta property="og:article:modified_time" content="2019-11-19" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Пенсия своими силами. Пошаговое руководство" />
 <meta property="og:url" content="https://onfin.github.io/literacy/howto" />
 
@@ -55,7 +55,7 @@
         <h1>Пенсия своими силами. Пошаговое руководство</h1>
         <div class="meta">
                 <p class="description">Правильное отношение к деньгам. Необходимость сбережений. Риск и доходность. Откуда берётся пассивный доход. Правила сбережений. Как учитывать и планировать расходы. Развитие финансовой дисциплины. Как и зачем создавать резервы. Правильный порядок закрытия кредитов. Что такое фондовый рынок, облигации и акции.</p>
-                <p> Обновлено: <time>2019-11-19</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -290,7 +290,7 @@ calcRetirement();
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/returns"> &lt;&lt; Анатомия доходности </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/basebank"> Выбор базового банка &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
