--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2020-06-27" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -55,7 +55,7 @@
         <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
         <div class="meta">
                 <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
-                <p> Обновлено: <time>2020-06-27</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -135,7 +135,7 @@
 </ol>
 <h2 id="_4">Льгота по долгосрочному владению ценными бумагами (ЛДВ)</h2>
 <p>Она же трёхлетняя льгота, она же инвестиционный налоговый вычет, предусмотренный пп. 1 п. 1 ст. 219.1 НК РФ.</p>
-<p>Представляет собой налоговый вычет на доход от продажи ценных бумаг, бывших в собственности больше 3-х лет, в размере 3Мр за каждый <em>полный</em> год владения каждым наименованием бумаги. Не работает на ИИС.</p>
+<p>Представляет собой налоговый вычет на доход от продажи ценных бумаг, бывших в собственности больше 3-х лет, в размере 3Мр за каждый <em>полный</em> год владения каждым наименованием бумаги. Только для бумаг, обращающихся на российских биржах. Не работает на ИИС.</p>
 <p>Как получить. После продажи бумаг направить брокеру заявление на применение льготы. Заявление требуется по закону. Вменяемый брокер сам пришлёт вам сообщение, что ваша сделка попадает под льготу и приложит форму заявления. Останется только подписать и отдать.</p>
 <h2 id="_5">Льгота на доход от продажи бумаг высокотехнологичного сектора</h2>
 <p>Даже писать не буду. И льгота до 22-го года, и в списке попадающих под неё бумаг — очевидный шлак из 5-го эшелона.</p>
@@ -178,7 +178,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/taxes"> &lt;&lt; Брокерский счёт: как рассчитываются и уплачиваются налоги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/cash"> Наличные деньги &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
