--- a/literacy/instruments/cash.html
+++ b/literacy/instruments/cash.html
@@ -96,7 +96,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/iis"> &lt;&lt; Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/deposits2"> Банковские счета, карты и вклады &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
