--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-16" />
-        <meta property="og:article:modified_time" content="2019-11-19" />
+        <meta property="og:article:modified_time" content="2020-07-08" />
 <meta property="og:title" content="Введение" />
 <meta property="og:url" content="https://onfin.github.io/literacy/intro" />
         <script>
@@ -69,7 +69,7 @@
         <h1>Введение</h1>
         <div class="meta">
                 <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                <p> Обновлено: <time>2019-11-19</time> </p>
+                <p> Обновлено: <time>2020-07-08</time> </p>
 
         </div>
     </header>
@@ -183,7 +183,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/notaboutmoney"> Бережливость — это не про деньги &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
