--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -124,7 +124,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/returns"> Анатомия доходности &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
