--- a/literacy/returns/index.html
+++ b/literacy/returns/index.html
@@ -138,7 +138,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/literacy/reserves"> &lt;&lt; Формирование резервов </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
