--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -89,7 +89,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/piketti2"> &lt;&lt; Социальное неравенство и налоги </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/system"> Как организованы мои финансы &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
