--- a/notes/diversification_math/index.html
+++ b/notes/diversification_math/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2019-12-29" />
+        <meta property="og:article:modified_time" content="2020-07-02" />
 <meta property="og:title" content="Математика диверсификации: портфельный эффект и ребалансировка между акциями" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math" />
 
@@ -55,7 +55,7 @@
         <h1>Математика диверсификации: портфельный эффект и ребалансировка между акциями</h1>
         <div class="meta">
                 <p class="description">Рассмотрим на простой модели как из набора акций с нулевой ожидаемой доходностью получается портфель с положительной и как на его доходность влияют довложения и ребалансировки</p>
-                <p> Обновлено: <time>2019-12-29</time> </p>
+                <p> Обновлено: <time>2020-07-02</time> </p>
 
         </div>
     </header>
@@ -76,7 +76,7 @@
 <p>С увеличением количества акций в портфеле, его ожидаемая доходность всё время растёт и снижается неопределённость в её размере. Мы не делали никаких ребалансировок и довложений, мы просто включили в портфель N независимо ведущих себя акций. Почему так получается? Ответ очевиден: убытки ограничены (стоимость акции не может стать отрицательной), а прибыль — нет.</p>
 <p>Теперь посмотрим на эффект довложений и ребалансировок (портфель из 50 акций, довложение/ребалансировка ежегодно в размере начальной суммы, расчёт на 30 лет).</p>
 <p><img src=/notes/diversification_math/portfolio_yields.svg style="width: 100%; height: 50wv" /></p>
-<p>Как видно, регулярные довложения (временна́я диверсификация) увеличивают и доходность, и стабильность портфеля. При этом докупка пропорционально капитализации имеет несколько неоднозначный эффект: она хороша, только если в портфеле оказалось достаточно «акций-счастливчиков». А ребалансировка (т.е. выравнивание долей акций в портфеле) показывает совершенно выдающиеся результаты по повышению доходности и снижению риска портфеля, только в 30% исходов проигрывая портфелям, взвешенным по капитализации.</p>
+<p>Как видно, регулярные довложения (временна́я диверсификация) увеличивают и доходность, и стабильность портфеля (но только в теоретической модели, где все движения цен независимые, а на реальном рынке <a href="/notes/contributions">доходность будет та же, а риск выше</a> ). При этом докупка пропорционально капитализации имеет несколько неоднозначный эффект: она хороша, только если в портфеле оказалось достаточно «акций-счастливчиков». А ребалансировка (т.е. выравнивание долей акций в портфеле) показывает совершенно выдающиеся результаты по повышению доходности и снижению риска портфеля, только в 30% исходов проигрывая портфелям, взвешенным по капитализации.</p>
 <p>Однако, эти результаты справедливы только в случае, если успех или неуспех компаний определяется случайными факторами. Если мы будем считать, что некоторые компании лучше других способны зарабатывать прибыль, а некоторые, наоборот, только уничтожают акционерный капитал, то получим следующие результаты.</p>
 <p><img src=/notes/diversification_math/portfolio_yields_fate.svg style="width: 100%; height: 50wv" /></p>
 <p>Оптимальным вариантом становится портфель, взвешенный и пополняемый пропорционально рыночной капитализации, а ребалансировка приводит только к снижению доходности.</p>
@@ -102,7 +102,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"><a class="prev" href="/notes/marketprice"> &lt;&lt; Откуда берётся рыночная цена и доходность акций </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/diversification_math2"> Математика диверсификации-2: доходность и риск &gt;&gt; </a></div>
+<div class="prevupnext"></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
