--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-11-10" />
-        <meta property="og:article:modified_time" content="2020-07-08" />
+        <meta property="og:article:modified_time" content="2020-07-15" />
 <meta property="og:title" content="Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов" />
 <meta property="og:url" content="https://onfin.github.io/literacy/iis" />
 
@@ -55,7 +55,7 @@
         <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
         <div class="meta">
                 <p class="description">Какие налоговые льготы и вычеты полагаются инвестору на российском фондовом рынке. Что такое ИИС, каковы особенности его использования, как получить вычет по ИИС.</p>
-                <p> Обновлено: <time>2020-07-08</time> </p>
+                <p> Обновлено: <time>2020-07-15</time> </p>
 
         </div>
     </header>
@@ -158,7 +158,7 @@
 <ol>
 <li>Не облагается налогом купон по ОФЗ и муниципальным облигациям (в т.ч. валютным). <strong>С 1 января 2021г льгота отменена и будет НДФЛ 13%.</strong></li>
 <li>Не облагается купон по рублёвым корпоративным облигациям, выпущенным с 1 января 2017г по 31 декабря 2020г (<a href="https://www.moex.com/ru/markets/stock/privilegeindividuals.aspx">список</a>), если суммарный купон за год меньше (номинальная стоимость облигации) × (ключевая ставка ЦБ + 5%). Превышение облагается налогом в 35%. <strong>С 1 января 2021г на все купоны будет НДФЛ 13% в общем порядке.</strong></li>
-<li>Не облагается налогом курсовая переоценка стоимости облигаций Минфина в валюте. Пусть вы купили облигацию по цене номинала в 1000$ при курсе 1$=60р, а в день погашения курс был 1$=70р. Если это была облигация Минфина, то налог вы не заплатите. Для других облигаций он будет (70×1000-60×1000)×13%=1300р.</li>
+<li>Не облагается налогом курсовая переоценка стоимости облигаций Минфина в валюте. Пусть вы купили облигацию по цене номинала в 1000$ при курсе 1$=60р, а в день погашения курс был 1$=70р. Если это была облигация Минфина, то налог вы не заплатите. Для других облигаций он будет <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord">7</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.72777em;vertical-align:-0.08333em;"></span><span class="mord">6</span><span class="mord">0</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1</span><span class="mord">0</span><span class="mord">0</span><span class="mord">0</span><span class="mclose">)</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">×</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.80556em;vertical-align:-0.05556em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">%</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2777777777777778em;"></span></span><span class="base"><span class="strut" style="height:0.8388800000000001em;vertical-align:-0.19444em;"></span><span class="mord">1</span><span class="mord">3</span><span class="mord">0</span><span class="mord">0</span><span class="mord cyrillic_fallback">р</span></span></span></span></span>.</li>
 </ol>
     </div>
     <aside>
