--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -16,23 +16,9 @@
     <meta property="og:description" content="Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-16" />
-        <meta property="og:article:modified_time" content="2020-07-08" />
+        <meta property="og:article:modified_time" content="2020-07-15" />
 <meta property="og:title" content="Введение" />
 <meta property="og:url" content="https://onfin.github.io/literacy/intro" />
-        <script>
-            MathJax = {
-                tex: {
-                    inlineMath: [['$', '$'], ['\\(', '\\)']],
-                    displayMath: [['$$', '$$'], ['\\[', '\\]']]
-                },
-                chtml: {
-                    scale: 1,
-                    matchFontHeight: true
-                }
-            };
-        </script>
-        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-chtml.js"></script>
-
 
 
 
@@ -69,7 +55,7 @@
         <h1>Введение</h1>
         <div class="meta">
                 <p class="description">Для кого этот сайт. Зачем нужно накапливать финансовый капитал. Историческая доходность акций. Расчёт итоговой доходности разового вложения, регулярных вложений. Сколько нужно сберегать, чтобы получить нужный доход. Через сколько лет можно достичь финансовой независимости.</p>
-                <p> Обновлено: <time>2020-07-08</time> </p>
+                <p> Обновлено: <time>2020-07-15</time> </p>
 
         </div>
     </header>
@@ -94,7 +80,7 @@
   }
 </script>
 
-<p>Вложенные под постоянную доходность деньги, если вложения не изымать, увеличиваются по формуле <em>сложного процента</em>: $C \cdot r^N$, где $C$ — начальная сумма, $r$ — ставка доходности (во сколько раз увеличивается капитал за некоторый период, считается как 1 + &lt;доходность за период в процентах&gt;/100), $N$ — количество периодов, за которые начисляются проценты. Соответственно, когда мы начинаем изымать эти деньги, наш доход в месяц будет составлять $C \cdot (r-1)/12$ т.е. забираем только проценты, не проедая основной капитал.</p>
+<p>Вложенные под постоянную доходность деньги, если вложения не изымать, увеличиваются по формуле <em>сложного процента</em>: <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.68333em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">⋅</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:0.8413309999999999em;vertical-align:0em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8413309999999999em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span></span></span></span></span>, где <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.68333em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span></span></span></span></span> — начальная сумма, <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.43056em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span></span></span></span></span> — ставка доходности (во сколько раз увеличивается капитал за некоторый период, считается как 1 + &lt;доходность за период в процентах&gt;/100), <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.68333em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.10903em;">N</span></span></span></span></span> — количество периодов, за которые начисляются проценты. Соответственно, когда мы начинаем изымать эти деньги, наш доход в месяц будет составлять <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.68333em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">⋅</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mopen">(</span><span class="mord mathnormal" style="margin-right:0.02778em;">r</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">1</span><span class="mclose">)</span><span class="mord">/</span><span class="mord">1</span><span class="mord">2</span></span></span></span></span> т.е. забираем только проценты, не проедая основной капитал.</p>
 <p>Таким образом, единожды вложенные
 <input id="comp-capital" type="number" value=100000 step=1000 style="width: 5em;" onChange="calcCompounding()" />р
 за
@@ -116,7 +102,7 @@
   }
 </script>
 
-<p>Может быть вам пока не страшно. Но мы каждый день тратим деньги, и сколько-то из них тратим впустую. Регулярные вложения увеличиваются уже по формуле <em>геометрической прогрессии</em>: $C \cdot \frac{1-r^N}{1-r}$. Пусть мы начинаем с нуля и каждый месяц откладываем
+<p>Может быть вам пока не страшно. Но мы каждый день тратим деньги, и сколько-то из них тратим впустую. Регулярные вложения увеличиваются уже по формуле <em>геометрической прогрессии</em>: <span><span class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.68333em;vertical-align:0em;"></span><span class="mord mathnormal" style="margin-right:0.07153em;">C</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span><span class="mbin">⋅</span><span class="mspace" style="margin-right:0.2222222222222222em;"></span></span><span class="base"><span class="strut" style="height:1.440696em;vertical-align:-0.403331em;"></span><span class="mord"><span class="mopen nulldelimiter"></span><span class="mfrac"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:1.0373649999999999em;"><span style="top:-2.655em;"><span class="pstrut" style="height:3em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord mtight">1</span><span class="mbin mtight">−</span><span class="mord mathnormal mtight" style="margin-right:0.02778em;">r</span></span></span></span><span style="top:-3.23em;"><span class="pstrut" style="height:3em;"></span><span class="frac-line" style="border-bottom-width:0.04em;"></span></span><span style="top:-3.394em;"><span class="pstrut" style="height:3em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight"><span class="mord mtight">1</span><span class="mbin mtight">−</span><span class="mord mtight"><span class="mord mathnormal mtight" style="margin-right:0.02778em;">r</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9190928571428572em;"><span style="top:-2.931em;margin-right:0.07142857142857144em;"><span class="pstrut" style="height:2.5em;"></span><span class="sizing reset-size3 size1 mtight"><span class="mord mathnormal mtight" style="margin-right:0.10903em;">N</span></span></span></span></span></span></span></span></span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.403331em;"><span></span></span></span></span></span><span class="mclose nulldelimiter"></span></span></span></span></span></span>. Пусть мы начинаем с нуля и каждый месяц откладываем
 <input id="contribution" type="number" value=10000 step=1000 style="width: 4.5em;" onChange="calcRegularContribution()" />р
 (в сегодняшних ценах, т.е. если деньги обесцениваются, то номинальную сумму увеличиваем), то за
 <input id="contr-period" type="number" value=40 step=1 style="width: 3em;" onChange="calcRegularContribution()" />лет
