--- a/literacy/basebank.html
+++ b/literacy/basebank.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Выбор базового банка</h1>
@@ -86,7 +85,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/literacy/howto"> &lt;&lt; Пенсия своими силами. Пошаговое руководство </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/cardscalc"> Использование и расчёт банковских карт &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
