--- a/literacy/iis.html
+++ b/literacy/iis.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов</h1>
@@ -178,7 +177,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/literacy/taxes"> &lt;&lt; Брокерский счёт: как рассчитываются и уплачиваются налоги </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/cash"> Наличные деньги &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
