--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-07-08" />
+        <meta property="og:article:modified_time" content="2020-07-27" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -48,7 +48,6 @@
     </header>
 
     <main>
-
 
 <article>
     <header>
@@ -92,6 +91,10 @@
 <li><a href="/literacy/instruments/realty">Недвижимость</a></li>
 <li><a href="/literacy/instruments/stocks">Акции</a></li>
 <li><a href="/literacy/instruments/crypto">Криптовалюты</a></li>
+</ol>
+<h2 id="_5">Инфраструктура фондового рынка</h2>
+<ol>
+<li><a href="/literacy/exchange">Как происходят торги на бирже</a></li>
 </ol>
     </div>
     <aside>
