--- a/literacy/instruments/bonds.html
+++ b/literacy/instruments/bonds.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Специфика, риски и доходность облигаций." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-03" />
-        <meta property="og:article:modified_time" content="2020-07-15" />
+        <meta property="og:article:modified_time" content="2020-07-22" />
 <meta property="og:title" content="Облигации" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/bonds" />
 
@@ -49,13 +49,12 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Облигации</h1>
         <div class="meta">
                 <p class="description">Специфика, риски и доходность облигаций.</p>
-                <p> Обновлено: <time>2020-07-15</time> </p>
+                <p> Обновлено: <time>2020-07-22</time> </p>
 
         </div>
     </header>
@@ -98,12 +97,10 @@
 </li>
 <li>
 <p>Заплаченная при покупке облигации сумма (стоимость) может быть как меньше, так и больше полученной в конце (номинала). Если во время обращения облигации процентные ставки снизились, то стоимость облигации возрастёт и станет больше номинала (т.к. размер купона зафиксирован), чтобы эффективная доходность стала равна среднерыночной. Можно считать, что каждая купонная выплата теперь содержит не только процент по долгу, но и компенсацию разницы между номиналом и стоимостью облигации. Так же и наоборот, если ставки вырастут, то стоимость облигации станет ниже номинала: и вместе с погашением основного долга вы получите компенсацию недополученных купонных выплат. Дальше есть калькулятор, на котором можно прикинуть это изменение цены в зависимости от параметров облигации.</p>
-</li>
-</ol>
 <p>Почему-то распространено мнение, что выгоднее покупать облигации, которые торгуются дешевле номинала. Это неверно. При равном риске, эффективная доходность к погашению (или <em>ожидаемая</em> эффективная доходность к погашению, если будущие выплаты по облигации неизвестны) будет одинакова.</p>
 <p>Но на даный момент с налоговой точки зрения выгоднее покупать облигации дороже номинала: при той же доходности после погашения у вас появится реализованный убыток, на который можно будет уменьшить налогооблагаемую прибыль по другому эмитенту.</p>
 <p>После же 1 января 2021 года, когда облигаций со льготным налогообложением не будет, действительно станет выгоднее покупать облигации дешевле номинала. Из-за отложенного налогообложения. У облигаций, продающихся дороже номинала, выский купон, а 13% будет удерживаться с каждой выплаты, уменьшая сумму для реинвестирования. С облигации, купленной дешевле номинала, вы всю разницу в выплатах получите в самом конце, при погашении, а налог с неё заплатите ещё через полгода-год.</p>
-<ol>
+</li>
 <li>
 <p>На стоимость облигаций также влияют и настроения на рынке. Очередной геополитический выверт распугал иностранных инвесторов — на распродажах ставки на рынке вырастают с 5%г до 20, а ваши облигации аналогично обесцениваются.</p>
 </li>
@@ -489,7 +486,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/deposits2"> &lt;&lt; Банковские счета, карты и вклады </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/instruments/gold"> Золото &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
