--- a/literacy/instruments/crypto.html
+++ b/literacy/instruments/crypto.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-05-19" />
-        <meta property="og:article:modified_time" content="2020-05-19" />
+        <meta property="og:article:modified_time" content="2020-07-27" />
 <meta property="og:title" content="Криптовалюты" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/crypto" />
 
@@ -49,13 +49,12 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Криптовалюты</h1>
         <div class="meta">
                 <p class="description">Разбираем экономическую сущность криптовалют и их пригодность в качестве актива в диверсифицированном портфеле. Результаты, как можно догадаться, неутешительные.</p>
-                <p> Обновлено: <time>2020-05-19</time> </p>
+                <p> Обновлено: <time>2020-07-27</time> </p>
 
         </div>
     </header>
@@ -126,7 +125,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments/stocks"> &lt;&lt; Акции </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/exchange"> Как происходят торги на бирже &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
