--- a/literacy/taxes.html
+++ b/literacy/taxes.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Брокерский счёт: как рассчитываются и уплачиваются налоги</h1>
@@ -163,7 +162,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/literacy/instruments"> &lt;&lt; Краткий обзор инструментов сбережения. Сколько и во что вкладывать </a><a class="up" href="/literacy"> &uarr; Грамотность &uarr; </a><a class="next" href="/literacy/iis"> Индивидуальный инвестиционный счёт и другие налоговые льготы и вычеты для инвесторов &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
