--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Инфляция</h1>
@@ -127,7 +126,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/notes/volatility"> &lt;&lt; Волатильность как мера риска </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
