--- a/notes/market_to_gdp/index.html
+++ b/notes/market_to_gdp/index.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Рост ВВП, прибыли компаний, капитализация и доходность рынка акций</h1>
@@ -144,7 +143,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/notes/contributions"> &lt;&lt; Проблема довложений </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
