--- a/notes/piketti.html
+++ b/notes/piketti.html
@@ -49,7 +49,6 @@
 
     <main>
 
-
 <article>
     <header>
         <h1>Полезно решать дифференциальные уравнения: Тома Пикетти</h1>
@@ -101,7 +100,7 @@
     </main>
 
     <footer>
-<div class="prevupnext"></div>
+<div class="prevupnext"><a class="prev" href="/notes/workersfactories"> &lt;&lt; Фабрики — рабочим </a><a class="up" href="/notes"> &uarr; Заметки о финансах &uarr; </a><a class="next" href="/notes/piketti2"> Социальное неравенство и налоги &gt;&gt; </a></div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
