--- a/literacy/exchange.html
+++ b/literacy/exchange.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Заявки на биржу, как заключаются и исполняются сделки, основные периоды и режимы торгов" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-07-27" />
-        <meta property="og:article:modified_time" content="2020-07-27" />
+        <meta property="og:article:modified_time" content="2020-07-28" />
 <meta property="og:title" content="Как происходят торги на бирже" />
 <meta property="og:url" content="https://onfin.github.io/literacy/exchange" />
 
@@ -54,7 +54,7 @@
         <h1>Как происходят торги на бирже</h1>
         <div class="meta">
                 <p class="description">Заявки на биржу, как заключаются и исполняются сделки, основные периоды и режимы торгов</p>
-                <p> Обновлено: <time>2020-07-27</time> </p>
+                <p> Обновлено: <time>2020-07-28</time> </p>
 
         </div>
     </header>
@@ -121,7 +121,7 @@
 <p>Когда на бирже находится предложение, встречное вашему, стороны заключают сделки не друг с другом, а каждая — с Центральным Контрагентом (по существу, с самой биржей), который гарантирует исполнение расчётов по сделке, если какая-то из сторон окажется несостоятельной.</p>
 <p>Расчёты по сделкам происходят не сразу. В момент заключения сделки на вашем счёте будет заморожена необходимая для её исполнения сумма денег (или количество бумаг). Отменить заключённую сделку нельзя.</p>
 <p>Деньги от продажи или бумаги после покупки вы получите в начале следующего торгового дня для сделок с облигациями, или следующего за ним для всех остальных бумаг. Это так называемые режимы торгов T+1 и T+2 (текущий день обозначается T0). Право на НКД и дивиденды вы тоже получите на следующий или через день соответственно.</p>
-<p>При этом, деньги, причитающиеся от продажи в T+2 сразу доступны для покупок в T+2 и T+1, а от продажи в T+1 — для покупок в T+1. Но вывести незачисленные деньги нельзя. И бумаги, которые ещё не были зачислены вам на счёт, продавать тоже нельзя.</p>
+<p>При этом, деньги, причитающиеся от продажи в T+2 сразу доступны для покупок в T+2, а от продажи в T+1 — для покупок в T+1 и T+2. Брокер рассчитывает доступные остатки денег и ценных бумаг на каждую из дат (T0, T+1, T+2), и, если у вас не подключено маржинальное кредитование, никакой из этих остатков не должен опускаться ниже нуля. На зарубежных биржах есть дополнительное ограничение: при <em>заключении сделки</em> по продаже ценной бумаги, её покупка уже должна быть полностью оплачена (внесением денег на счёт или зачислением денег от расчётов по другой сделке).</p>
 <p>Каким образом хранятся и передаются бумаги — в следующей статье.</p>
     </div>
     <aside>
